# Github-actions-with-R

./: .flake8  .gitignore  README.md  pyproject.toml  test.sh
.github/workflows/: schedule-run.yaml
Data/: blsfood.csv
R/: run_ts_analysis.r
slack/: file_sender.py
